Fix FRS input layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ p {
 
 .form--wide {
   width: 50vw;
-  min-width: 400px;
+  min-width: 350px;
   max-width: 600px;
 }
 
@@ -112,7 +112,7 @@ p {
   border: 1px solid #ddd;
   border-radius: 0.25rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1rem 0 1rem;
   display: flex;
   flex-direction: column;
   display: -ms-flexbox;
