--- a/src/components/FacialRecognitionSystem/FacialRecognitionSystem.css
+++ b/src/components/FacialRecognitionSystem/FacialRecognitionSystem.css
@@ -8,9 +8,10 @@
 }
 
 .frs__image {
-  width: 50vw;
-  max-width: 800px;
-  min-width: 350px;
+  height: 60vh;
+  max-height: 800px;
+  min-height: 350px;
+  max-width: 350px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.24);
 }
 
